Add category service impl